[package]
name = "rust-9p"
version = "0.0.1"
edition = "2018"
authors = ["Ryo Munakata (pfpacket) <afpacket@gmail.com>"]
description = "Filesystems library using 9P2000.L protocol, an extended variant of 9P from Plan 9"
documentation = "https://pfpacket.github.io/rust-9p/rs9p/index.html"
repository = "https://github.com/pfpacket/rust-9p"
readme = "README.md"
keywords = ["9p", "Plan9", "v9fs", "filesystem", "network"]
categories = ["filesystem", "network-programming"]
license-file = "LICENSE"

[badges]
travis-ci = { repository = "pfpacket/rust-9p", branch = "master" }

[lib]
name = "rs9p"
crate-type = ["rlib"]

[dependencies]
log = "0.4.14"
num-traits = "0.2.14"
nix = "0.20.0"
byteorder = "1.4.2"
bitflags = "1.2.1"
enum_primitive = "0.1.1"
async-trait = "0.1.48"
tokio = { version = "1.2.0", features = ["full"] }
tokio-util = { version = "0.6.3", features = ["codec"] }
bytes = "1.0.1"
futures = "0.3.13"

[profile.release]
opt-level = 3
lto = true
