[package]
name = "unpfs"
version = "0.0.1"
authors = ["afpacket <afpacket@gmail.com>"]
edition = "2018"

[[bin]]
name = "unpfs"

[dependencies]
nix = "0.20.0"
env_logger = "0.8.3"
filetime = "0.2.14"
tokio = { version = "1.2.0", features = ["full"] }
async-trait = "0.1.48"
futures = "0.3.13"
tokio-stream = { version = "0.1.3", features = ["fs"] }

[dependencies.rust-9p]
path = "../../"

[profile.release]
opt-level = 3
lto = true
